--- a/main.ui
+++ b/main.ui
@@ -283,7 +283,7 @@
                                 <item>
                                     <widget class="QSlider" name="osc1Gain">
                                         <property name="maximum">
-                                            <number>200</number>
+                                            <number>100</number>
                                         </property>
                                         <property name="value">
                                             <number>100</number>
@@ -302,7 +302,7 @@
                                 <item>
                                     <widget class="QSlider" name="osc1Freq">
                                         <property name="maximum">
-                                            <number>100</number>
+                                            <number>50</number>
                                         </property>
                                         <property name="singleStep">
                                             <number>1</number>
@@ -328,7 +328,7 @@
                                 <item>
                                     <widget class="QSlider" name="osc2Gain">
                                         <property name="maximum">
-                                            <number>200</number>
+                                            <number>100</number>
                                         </property>
                                         <property name="value">
                                             <number>100</number>
@@ -347,7 +347,7 @@
                                 <item>
                                     <widget class="QSlider" name="osc2Freq">
                                         <property name="maximum">
-                                            <number>100</number>
+                                            <number>50</number>
                                         </property>
                                         <property name="singleStep">
                                             <number>1</number>
@@ -627,13 +627,13 @@
                                 </property>
                             </spacer>
                         </item>
-                        <item>
-                            <widget class="QPushButton" name="pushButton">
-                                <property name="text">
-                                    <string>Play / Pause</string>
-                                </property>
-                            </widget>
-                        </item>
+<!--                        <item>-->
+<!--                            <widget class="QPushButton" name="pushButton">-->
+<!--                                <property name="text">-->
+<!--                                    <string>Play / Pause</string>-->
+<!--                                </property>-->
+<!--                            </widget>-->
+<!--                        </item>-->
                     </layout>
                 </item>
                 <item row="0" column="4">
